--- a/medical college/index.html
+++ b/medical college/index.html
@@ -22,7 +22,7 @@
                   <a href="tel:919999999999"><span><i class="fa fa-phone"></i> +91 9999999999</span>
                     &nbsp;</a>
                   <a href="#"><span class="mvw"><i class="fa fa-envelope"></i>
-                      info@gmail.com</span></a>
+                      infssso@gmail.com</span></a>
                 </p>
               </div>
             </div>
