--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
     <div class="topmenu navbar_bgcolor" style="border-bottom: 2px solid #0ba3a7;background: #0ba3a7;">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12 col-md-6 col-xs-6">
+          <div class="col-sm-12 col-md-6">
             <div class="left-top">
              
             </div>
           </div>
-          <div class="col-sm-12 col-md-6 col-xs-6">
+          <div class="col-sm-12 col-md-6 ">
             <div class="left-top">
               <p>
                 <a href="tel:919999999999"><span><i class="fa fa-phone"></i> +91 123456789</span>
